; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-sysfs.c_blk_exit_queue.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-sysfs.c_blk_exit_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_queue = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.request_queue*)* @blk_exit_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @blk_exit_queue(%struct.request_queue* %0) #0 {
  %2 = alloca %struct.request_queue*, align 8
  store %struct.request_queue* %0, %struct.request_queue** %2, align 8
  %3 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %4 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %9 = call i32 @ioc_clear_queue(%struct.request_queue* %8)
  %10 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %11 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %12 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @__elevator_exit(%struct.request_queue* %10, i32* %13)
  %15 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %16 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %15, i32 0, i32 1
  store i32* null, i32** %16, align 8
  br label %17

17:                                               ; preds = %7, %1
  %18 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %19 = call i32 @blkcg_exit_queue(%struct.request_queue* %18)
  %20 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %21 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = call i32 @bdi_put(i32 %22)
  ret void
}

declare dso_local i32 @ioc_clear_queue(%struct.request_queue*) #1

declare dso_local i32 @__elevator_exit(%struct.request_queue*, i32*) #1

declare dso_local i32 @blkcg_exit_queue(%struct.request_queue*) #1

declare dso_local i32 @bdi_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
